tests/expectations/compiler/function/too_many_transitions_fail.out
Error [ETYC0372047]: The number of entry point fns exceeds the maximum. snarkVM allows up to 31 entry point fns within a single program.
    --> compiler-test:1:9
     |
   1 | program test.aleo {
     |         ^^^^^^^^^
